[package]
name = "telemt"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# C
libc = "0.2"

# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Crypto
aes = "0.8"
ctr = "0.9"
cbc = "0.1"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hmac = "0.12"
crc32fast = "1.3"

# Network
socket2 = { version = "0.5", features = ["all"] }
rustls = "0.22"

# Serial
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utils
bytes = "1.5"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
dashmap = "5.5"
lru = "0.12"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.21"
url = "2.5"
regex = "1.10"
once_cell = "1.19"
crossbeam-queue = "0.3"

# HTTP
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "crypto_bench"
harness = false